panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__generic__test_default_is_chosen_if_no_match.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (c~1 `char` @0) (truncate `char` @0 (0 `int` @4)))
         (return (42 `int` @4)))))

----- stderr -----
